# aws-sdk-c-complete-guide-with-examples

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  PROJECT_README.md  README.md  build.sh  setup_credentials.sh
cmake/: Doxyfile.in  FindDoxygen.cmake  PackageConfig.cmake
include/awsexamples/: AwsUtils.h  DynamoDBManager.h  EC2Manager.h  S3Manager.h
src/app/: CMakeLists.txt  DynamoDBExample.cpp  EC2Example.cpp  S3Example.cpp
src/lib/: AwsUtils.cpp  CMakeLists.txt  DynamoDBManager.cpp  EC2Manager.cpp  S3Manager.cpp
test/: CMakeLists.txt  S3ManagerTest.cpp
